examples/test/testpolicy6675.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6675
  namespace: namespace356
spec:
  podSelector:
    matchLabels:
      key1: value14
      key5: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value2
          key44: value16
      podSelector:
        matchLabels:
          key0: value40
          key7: value25
